# giglib

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: docs.yaml  tests.yaml
GeneticInheritanceGraph/: __init__.py  graph.py  tables.py  util.py
GeneticInheritanceGraphLibrary/: __init__.py  constants.py  graph.py  tables.py  util.py
docs/: Makefile  _config.yml  _toc.yml  api.md  build.sh  concepts.md  index.md  installation.md  python-api.md  requirements.txt  usage.md
giglib/: __init__.py  constants.py  graph.py  tables.py
tests/: conftest.py  gigutil.py  sim.py  test_constants.py  test_gigutil.py  test_graph.py  test_tables.py  test_util.py  util_tests.py
