[metadata]
name = GeneticInheritanceGraph
author = Yan Wong and Duncan Mbuli-Robertson
author_email = yan.wong@bdi.ox.ac.uk
license = MIT
description = A library to implement the concept of a Genetic Inheritance Graph.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    population genetics
    tree sequence
    ancestral recombination graph
    evolutionary tree
    genetic inheritance graph
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = GeneticInheritanceGraph
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    tskit>=0.5.6

[tool:pytest]
testpaths =
    tests
